# FireForce

./: .gitignore  CMakeLists.txt  README.md  proxim.c
Codigo_Final/Bombero/: CMakeLists.txt  Temperatura.c  Temperatura.h  UltraS.c  UltraS.h  access_sys.c
FireDoxy/html/: _codigo___final_2_bombero_2access__sys_8c.html  _codigo___final_2_bombero_2access__sys_8c.js  _codigo___final_2_bombero_2access__sys_8c_source.html  _codigo___final_2_bombero_2build_2_c_make_files_23_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _codigo___final_2_bombero_2build_2_c_make_files_23_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  _codigo___final_2_bombero_2build_2_c_make_files_23_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  _codigo___final_2_bombero_2build_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _codigo___final_2_bombero_2build_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _codigo___final_2_bombero_2build_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _codigo___final_2_bombero_2build_2generated_2pico__base_2pico_2config__autogen_8h.html  _codigo___final_2_bombero_2build_2generated_2pico__base_2pico_2config__autogen_8h_source.html  _codigo___final_2_bombero_2build_2generated_2pico__base_2pico_2version_8h.html  _codigo___final_2_bombero_2build_2generated_2pico__base_2pico_2version_8h_source.html  _modulo___motor_2access__sys_8c.html  _modulo___motor_2access__sys_8c.js  _modulo___motor_2access__sys_8c_source.html  _modulo___motor_2build_2_c_make_files_23_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _modulo___motor_2build_2_c_make_files_23_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  _modulo___motor_2build_2_c_make_files_23_825_82_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  _modulo___motor_2build_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _modulo___motor_2build_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _modulo___motor_2build_2_c_make_files_23_825_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  (+133 more)
Modulo_Motor/: CMakeLists.txt  access_sys.c  gpio_led.h
Modulo_Proximidad/: proxim.c
Modulo_Temperatura/: CMakeLists.txt  adc_dma.c
(+75 files in other folders)
